--- a/app/views/snippets/edit.html.haml
+++ b/app/views/snippets/edit.html.haml
@@ -1,21 +1,9 @@
-:erb
-  <h1>Editing snippet</h1>
+%h1 Editing snippet
 
-  <% form_for(@snippet) do |f| %>
-    <%= f.error_messages %>
+- semantic_form_for(@snippet) do |f|
+  = f.inputs
+  = f.buttons
 
-    <p>
-      <%= f.label :code %><br />
-      <%= f.text_area :code %>
-    </p>
-    <p>
-      <%= f.label :language %><br />
-      <%= f.text_field :language %>
-    </p>
-    <p>
-      <%= f.submit 'Update' %>
-    </p>
-  <% end %>
-
-  <%= link_to 'Show', @snippet %> |
-  <%= link_to 'Back', snippets_path %>
+= link_to 'Show', @snippet 
+|
+= link_to 'Back', snippets_path
