--- a/app/views/snippets/index.html.haml
+++ b/app/views/snippets/index.html.haml
@@ -1,23 +1,18 @@
-:erb
-  <h1>Listing snippets</h1>
+%h1 Listing snippets
 
-  <table>
-    <tr>
-      <th>Code</th>
-      <th>Language</th>
-    </tr>
+%table{:id=>"snippets"}
+  %tr
+    %th Code
+  - @snippets.each_with_index do |snippet,i|
+    %tr{:class=>"snippet", :id=>"snippet_#{i}"}
+      %td
+        %pre~h snippet.code.to_a.first(3).to_s
+      %td= link_to 'Show', snippet
+      %td= link_to 'Edit', edit_snippet_path(snippet)
+      %td= link_to 'Destroy', snippet, :confirm => 'Are you sure?', :method => :delete
 
-  <% @snippets.each do |snippet| %>
-    <tr>
-      <td><%=h snippet.code %></td>
-      <td><%=h snippet.language %></td>
-      <td><%= link_to 'Show', snippet %></td>
-      <td><%= link_to 'Edit', edit_snippet_path(snippet) %></td>
-      <td><%= link_to 'Destroy', snippet, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
-  <% end %>
-  </table>
+%br
 
-  <br />
+= will_paginate @snippets
 
-  <%= link_to 'New snippet', new_snippet_path %>
+= link_to 'New snippet', new_snippet_path
