Adds formtastic CSS links, extracts snippets partial and removes blank line from Language select dropdown

--- a/app/views/snippets/edit.html.haml
+++ b/app/views/snippets/edit.html.haml
@@ -1,8 +1,6 @@
 %h1 Editing snippet
 
-- semantic_form_for(@snippet) do |f|
-  = f.inputs
-  = f.buttons
+= render @snippet
 
 = link_to 'Show', @snippet 
 |
