--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %head
   %meta{"http-equiv"=>"content-type", "content"=>"text/html;charset=UTF-8"}
   %title #{controller.controller_name}: #{controller.action_name}
-  = stylesheet_link_tag 'scaffold'
+  = stylesheet_link_tag 'scaffold', 'formtastic','formtastic_changes'
 %body
   %p{:style=>"color: green"}= flash[:notice]
   %ul{:id=>'navigation'}
