--- a/app/views/snippets/new.html.haml
+++ b/app/views/snippets/new.html.haml
@@ -1,7 +1,5 @@
 %h1 New snippet
 
-- semantic_form_for(@snippet) do |f|
-  = f.inputs
-  = f.buttons
+= render @snippet
 
 = link_to 'Back', snippets_path
