Adds a layout (using Blueprint)
* Wires up blueprint
* Reworks the interface and remove labels from fields
  The form is too simple and allows us to drop namings.
* Extracts formatting and previewing logic from view to model
* Removed unused/un-needed links
* Turns site name/logo into a link

--- a/app/views/snippets/index.html.haml
+++ b/app/views/snippets/index.html.haml
@@ -1,24 +1,16 @@
-%h1 Listing snippets
+%h2 Snippets
 
-%table{:id=>"snippets"}
-  %tr
-    %th Code
+#snippets
   - @snippets.each_with_index do |snippet, index|
-    %tr{:class=>"snippet", :id=>"snippet_#{index}"}
-      %td
-        %table
-          %tr
-            %td
-              %pre.slush_poppies
-                %span.line-numbers>~ Range.new(1,snippet.code.to_a.first(3).size).map{|line_number| line_number.to_s.rjust(4)+"&#x000A;"}
-            %td~ Uv.parse(snippet.code.to_a.first(3).to_s, 'xhtml', snippet.language.parser, false, 'slush_poppies')
+    .snippet{:id => "snippet_#{index}"}
+      .span-21= link_to 'Show', snippet
+      .span-3.last.quiet #{time_ago_in_words(snippet.updated_at)} ago
+      .span-1.first
+        %pre.slush_poppies
+          %span.line-numbers>~ snippet.preview.formatted_line_numbering
+      .span-23.last
+        ~ snippet.preview.formatted_code
 
-
-      %td= link_to 'Show', snippet
-      %td= link_to 'Edit', edit_snippet_path(snippet)
-      %td= link_to 'Destroy', snippet, :confirm => 'Are you sure?', :method => :delete
 %br
 
 = will_paginate @snippets
-
-= link_to 'New snippet', new_snippet_path
