--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,11 +3,20 @@
 %head
   %meta{"http-equiv"=>"content-type", "content"=>"text/html;charset=UTF-8"}
   %title #{controller.controller_name}: #{controller.action_name}
-  = stylesheet_link_tag 'scaffold', 'formtastic', 'formtastic_changes', 'themes/slush_poppies'
+  = stylesheet_link_tag 'blueprint/screen.css'
+  = stylesheet_link_tag 'application'
+  =# stylesheet_link_tag 'scaffold'
+  =# stylesheet_link_tag 'formtastic', 'formtastic_changes'
+  = stylesheet_link_tag 'themes/slush_poppies'
 %body
-  %p{:style=>"color: green"}= flash[:notice]
-  %ul{:id=>'navigation'}
-    %li= link_to "Browse", snippets_path
-    %li= link_to "New", new_snippet_path
-
-  = yield
+  .container
+    .span-4
+      %h1= link_to "PasteMe", root_path
+    #navigation.span-20.last
+      %ul
+        %li= link_to "Browse", snippets_path
+        %li= link_to "New", new_snippet_path
+    #content.span-24.last
+      - if flash[:notice]
+        #flash.success= flash[:notice]
+      = yield
