--- a/app/views/snippets/_snippet.html.haml
+++ b/app/views/snippets/_snippet.html.haml
@@ -1,5 +1,5 @@
-- semantic_form_for(@snippet) do |f|
+- semantic_form_for(snippet) do |f|
   - f.inputs do
-    = f.input :language, :include_blank => false
-    = f.input :code
-    = f.buttons
+    .prepend-19= f.input :language, :include_blank => false, :label => false
+    %p.span-20= f.input :code, :label=>false
+    .prepend-20= f.commit_button
