--- a/app/views/snippets/show.html.haml
+++ b/app/views/snippets/show.html.haml
@@ -7,10 +7,12 @@
   %b Language:
   =h @snippet.language.name
 
-= link_to 'Edit', edit_snippet_path(@snippet)
-|
-= link_to 'Destroy', @snippet, :confirm => 'Are you sure?', :method => :delete
+=link_to "Fullscreen", fullscreen_snippet_path(@snippet)
 |
 =link_to "Raw", snippet_path(@snippet, :format=>:text)
 |
 =link_to "JSON", snippet_path(@snippet, :format=>:json)
+|
+= link_to 'Edit', edit_snippet_path(@snippet)
+|
+= link_to 'Destroy', @snippet, :confirm => 'Are you sure?', :method => :delete
