--- a/app/views/snippets/show.html.haml
+++ b/app/views/snippets/show.html.haml
@@ -10,3 +10,7 @@
 = link_to 'Edit', edit_snippet_path(@snippet)
 |
 = link_to 'Destroy', @snippet, :confirm => 'Are you sure?', :method => :delete
+|
+=link_to "Raw", snippet_path(@snippet, :format=>:text)
+|
+=link_to "JSON", snippet_path(@snippet, :format=>:json)
