Feature: Only creator can edit and destroy a snippet
Implements a session-based "ownership"
of snippets.
The creator can edit/destroy the snippet while
the browser session is valid.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,6 @@
       #content.span-24.last
         - if flash[:notice]
           #flash.success= flash[:notice]
+        - if flash[:error]
+          #flash.error= flash[:error]
         = yield
